--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                   <h4>Arcade (Monthly)</h4>
                   <h4 class="right">$9/mo</h4>
                 </div>
-                <a href="">change</a>
+                <a href="#">change</a>
 
               </div>
               <div class="buttom_con">
